deploy/resources/generation/sas-bases/components/security/network/projectcontour.io/httpproxy/full-stack-tls/sas-catalog-services-transformers.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-catalog-httpproxy-full-stack-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: full-stack
  - op: add
    path: /spec/routes/0/services/0/protocol
    value: tls
  - op: replace
    path: /spec/routes/0/services/0/port
    value: 443
  - op: add
    path: /spec/routes/1/services/0/protocol
    value: tls
  - op: replace
    path: /spec/routes/1/services/0/port
    value: 443
target:
  kind: HTTPProxy
  group: projectcontour.io
  version: v1
  name: sas-catalog
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-catalog-table-bot-httpproxy-full-stack-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: full-stack
  - op: add
    path: /spec/routes/0/services/0/protocol
    value: tls
  - op: replace
    path: /spec/routes/0/services/0/port
    value: 443
  - op: add
    path: /spec/routes/1/services/0/protocol
    value: tls
  - op: replace
    path: /spec/routes/1/services/0/port
    value: 443
target:
  kind: HTTPProxy
  group: projectcontour.io
  version: v1
  name: sas-catalog-table-bot
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-glossary-httpproxy-full-stack-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: full-stack
  - op: add
    path: /spec/routes/0/services/0/protocol
    value: tls
  - op: replace
    path: /spec/routes/0/services/0/port
    value: 443
  - op: add
    path: /spec/routes/1/services/0/protocol
    value: tls
  - op: replace
    path: /spec/routes/1/services/0/port
    value: 443
target:
  kind: HTTPProxy
  group: projectcontour.io
  version: v1
  name: sas-glossary
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-relationships-httpproxy-full-stack-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: full-stack
  - op: add
    path: /spec/routes/0/services/0/protocol
    value: tls
  - op: replace
    path: /spec/routes/0/services/0/port
    value: 443
  - op: add
    path: /spec/routes/1/services/0/protocol
    value: tls
  - op: replace
    path: /spec/routes/1/services/0/port
    value: 443
target:
  kind: HTTPProxy
  group: projectcontour.io
  version: v1
  name: sas-relationships
